fixed button look on mobile devices

--- a/static/css/gSTYLE.css
+++ b/static/css/gSTYLE.css
@@ -46,6 +46,10 @@ p {
     }
 }
 
+button{
+    color:black;
+}
+
 /* Scroll settings */
 html, body {
     height: 100%; /* Allow scrolling */
